--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Home
+<h2>Recently Added</h2>
+<div>
+    <% books.forEach(book => { %>
+        <img height="150" width="100" src="<%= book.coverImagePath %> " alt="cover image">
+    <% }) %> 
+</div>
