File Upload Database

--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,5 +1,5 @@
-<h2>New Author</h2>
-<form action="/books" method="POST" enctype="multipart/form-data">
+<h2>New Books</h2>
+<form action="/books" method="POST">
     <%- include('_form_fields.ejs') %> 
     <a href="/books">Cancel</a>
     <button type="submit">Create</button>
