--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -4,7 +4,9 @@
     { url: `/authors/${author.id}` }) %> 
 <% if (booksByAuthor.length > 0) { %>
     <h2>Books By Author</h2>
-    <% booksByAuthor.forEach(book => { %>
-        <img height="150" width="100" src="<%= book.coverImagePath %> " alt="cover image">
-    <% }) %>    
+    <a href="/books/<%= book.id %>">
+        <% booksByAuthor.forEach(book => { %>
+            <img height="150" width="100" src="<%= book.coverImagePath %> " alt="cover image">
+        <% }) %>    
+    </a>
 <% } %>  
