--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <h2>Recently Added</h2>
 <div>
     <% books.forEach(book => { %>
-        <img height="150" width="100" src="<%= book.coverImagePath %> " alt="cover image">
+        <a href="/books/<%= book.id %>">
+            <img height="150" width="100" src="<%= book.coverImagePath %> " alt="cover image">
+        </a>
     <% }) %> 
 </div>
