--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">Mybrary</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">Mybrary</a>
         <ul>
             <li><a href="/books">Books</a></li>
             <li><a href="/books/new">Add Books</a></li>
