--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Books</h2>
+<h2 class="page-header">New Books</h2>
 <form action="/books" method="POST">
     <%- include('_form_fields.ejs') %> 
     <a href="/books">Cancel</a>
