Form Setup Styles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
 @import 'shared/variable.css';
 @import 'shared/header.css';
 @import 'shared/buttons.css';
+@import 'shared/form.css';
 
 :root {
     font-family: 'Inter', sans-serif;
