--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,10 +1,11 @@
-<div>
-    <label for="title">Title</label>
-    <input type="text" id="title" name="title" value="<%= book.title %>">
-</div>
-<div>
-    <label>Author</label>
-    <select name="author">
+<div class="form-row">
+    <div class="form-item">
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" value="<%= book.title %>">
+    </div>
+    <div class="form-item">
+        <label>Author</label>
+        <select name="author">
         <% authors.forEach(author => { %>
             <% if(author.id === book.author){ %>
                 <option selected label="<%= author.name %>" value="<%= author.id %>" />
@@ -13,23 +14,27 @@
             <% } %> 
         <% }) %> 
     </select>
+    </div>
 </div>
-<div>
-    <label>Publish Date</label>
-    <input type="date" name="publishDate"
+
+<div class="form-row">
+    <div class="form-item">
+        <label>Publish Date</label>
+        <input type="date" name="publishDate"
         value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    </div>
+    <div class="form-item">
+        <label for="pageCount">Page Count</label>
+        <input type="number" id="pageCount" name="pageCount" min="1" value="<%= book.pageCount %>">
+    </div>
 </div>
-<div>
-    <label for="pageCount">Page Count</label>
-    <input type="number" id="pageCount" name="pageCount" min="1" value="<%= book.pageCount %>">
+<div class="form-row">
+    <div class="form-item form-item-no-grow">
+        <label>Cover</label>
+        <input type="file" name="cover" class="filepond">
+    </div>
+    <div class="form-item">
+        <label>Description</label>
+        <textarea name="description"><%= book.description %></textarea>
+    </div>
 </div>
-<div>
-    <label>Cover</label>
-    <input type="file" name="cover" class="filepond">
-</div>
-<div>
-    <label>Description</label>
-    <textarea name="description"><%= book.description %></textarea>
-</div>
-
-
