--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -23,10 +23,4 @@
     </div>
 </form>
 <br>
-<div>
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height="150" width="100" src="<%= book.coverImagePath %>" alt="cover image">
-        </a>
-    <% }) %> 
-</div>
+<%- include('../partials/bookGrid', { books, large: true }) %> 
