--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -5,7 +5,7 @@
         <div class="book-details-btn-grid">
             <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Edit</a>
             <%- include('../partials/deleteForm.ejs', { url: `/books/${book.id}` }) %> 
-            <a class="btn btn-primary book-details-author-btn" href="/author/<%= book.author.id %>">View Author</a>
+            <a class="btn btn-primary book-details-author-btn" href="/authors/<%= book.author.id %>">View Author</a>
         </div>
     </div>
     <div class="book-details-grid">
